# X1_Strontium

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  README.pl.md
.github/workflows/: ci.yml  release.yml
daemon/: Cargo.toml
daemon/src/: config.rs  consensus.rs  main.rs  ntp_client.rs  rotation.rs  status.rs  submitter.rs
docs/: OPERATOR_ONBOARDING.md
programs/x1-strontium/: Cargo.toml
programs/x1-strontium/src/: lib.rs
programs/x1-strontium/tests/: account_parse_integration.rs
