[package]
name = "x1-strontium"
version = "1.0.0"
description = "X1 Strontium — decentralized atomic time oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x1_strontium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Anchor 0.30.1 and solana-program 1.17 macros emit cfg checks for these
# feature names; declaring them as empty features silences the Rust 1.80+
# `unexpected_cfgs` lint without affecting behavior.
anchor-debug = []
custom-heap = []
custom-panic = []

# solana-program also emits `#[cfg(target_os = "solana")]` for its SBF path.
# That value is off the target_os allow-list (it's a custom target), so we
# declare it explicitly.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck    = { version = "1.16", features = ["derive"] }

# Integration tests only — validates the contract's manual byte-offset
# parsers against solana-program's reference deserializers using LIVE X1
# mainnet accounts. No production build uses these crates.
[dev-dependencies]
base64      = "0.22"
bincode     = "1.3"
bs58        = "0.5"
serde_json  = "1"
ureq        = { version = "2", features = ["json"] }
