[package]
name = "x1-strontium"
version = "1.0.0"
description = "X1 Strontium — decentralized atomic time oracle"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "x1_strontium"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# Anchor 0.30.1 and solana-program 1.17 macros emit cfg checks for these
# feature names; declaring them as empty features silences the Rust 1.80+
# `unexpected_cfgs` lint without affecting behavior.
anchor-debug = []
custom-heap = []
custom-panic = []

# solana-program also emits `#[cfg(target_os = "solana")]` for its SBF path.
# That value is off the target_os allow-list (it's a custom target), so we
# declare it explicitly.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
bytemuck    = { version = "1.16", features = ["derive"] }
